[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/menus/lan/client_config_menu.gd" type="Script" id=1]
[ext_resource path="res://Asset/screen.png" type="Texture" id=2]
[ext_resource path="res://fonts/pablo-impallari_dosis/Dosis-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Asset/UI/KenneyBasePack/buton_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://Asset/UI/KenneyBasePack/buton_pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://Asset/UI/KenneyBasePack/buton_disable.tres" type="StyleBox" id=6]
[ext_resource path="res://Asset/UI/KenneyBasePack/font_semi_bold_40.tres" type="DynamicFont" id=7]
[ext_resource path="res://fonts/pablo-impallari_dosis/Dosis-SemiBold.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]

size = 64
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 40
use_mipmaps = true
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="StyleBoxFlat" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="StyleBoxFlat" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="DynamicFont" id=5]

size = 36
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Menu" type="Node2D"]

script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -120 )
_sections_unfolded = [ "Offset" ]

[node name="Title" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 387.0
margin_top = 45.0
margin_right = 893.0
margin_bottom = 127.0
rect_rotation = -0.0925835
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Connect to Server"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Start" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 517.0
margin_top = 578.0
margin_right = 766.0
margin_bottom = 663.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.414062, 0.414062, 0.414062, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.828125, 0.828125, 0.828125, 1 )
custom_colors/font_color_pressed = Color( 0.988281, 0.424652, 0.424652, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start Client"
flat = false
align = 1
_sections_unfolded = [ "Margin" ]

[node name="Back" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 517.0
margin_top = 448.0
margin_right = 766.0
margin_bottom = 533.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.414062, 0.414062, 0.414062, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.828125, 0.828125, 0.828125, 1 )
custom_colors/font_color_pressed = Color( 0.988281, 0.424652, 0.424652, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1
_sections_unfolded = [ "Grow Direction", "Margin" ]

[node name="Address Label" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 380.0
margin_top = 201.0
margin_right = 619.0
margin_bottom = 253.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Server Address"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Address" type="LineEdit" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 638.0
margin_top = 205.0
margin_right = 884.0
margin_bottom = 251.0
rect_pivot_offset = Vector2( 0, 0 )
hint_tooltip = "click to edit"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "255.255.255.255"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="Port Label" type="Label" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 534.0
margin_top = 312.0
margin_right = 614.0
margin_bottom = 364.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Port"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Port" type="LineEdit" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 639.0
margin_top = 315.0
margin_right = 766.0
margin_bottom = 361.0
rect_pivot_offset = Vector2( 0, 0 )
hint_tooltip = "click to edit"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "18691"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="Middle" type="Line2D" parent="." index="8"]

visible = false
points = PoolVector2Array( 640, -46.1521, 640, 764.92 )
width = 1.0
default_color = Color( 0, 0, 0, 1 )
texture_mode = 1255088272
sharp_limit = 2.0
round_precision = 8
_sections_unfolded = [ "Transform" ]

[node name="Camera" type="Camera2D" parent="." index="9"]

position = Vector2( 640, 360 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[connection signal="pressed" from="Start" to="." method="_on_start"]

[connection signal="pressed" from="Back" to="." method="_on_back"]

[connection signal="text_changed" from="Address" to="." method="_on_address_changed"]

[connection signal="text_entered" from="Address" to="." method="_on_address_changed"]

[connection signal="text_changed" from="Port" to="." method="_on_port_changed"]

[connection signal="text_entered" from="Port" to="." method="_on_port_changed"]


